# frida-mgr

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/agent/: mod.rs
src/android/: adb.rs  foreground.rs  mod.rs
src/cli/: mod.rs
src/cli/commands/: agent.rs  devices.rs  doctor.rs  foreground.rs  frida.rs  init.rs  install.rs  list.rs  mod.rs  objection.rs  objection_fg.rs  pip.rs  push.rs  run.rs  script.rs  shell.rs  spawn.rs  start.rs  status.rs  stop.rs  sync.rs  top.rs  uv.rs
src/config/: global.rs  mod.rs  overrides.rs  project.rs  schema.rs  validation.rs  version_map.rs
src/core/: error.rs  fs.rs  http.rs  mod.rs  path.rs  process.rs
src/frida/: mod.rs
src/frida/server/: download.rs  mod.rs
src/python/: executor.rs  mod.rs  pypi.rs  uv.rs
